# Personalized-H-M-Recommendation-System

./: fix_notebook.py  main.py  pyproject.toml  tmp_diagnose.py  update_kernel.py
.github/actions/setup/: action.yaml
.github/workflows/: ml_pipelines.yaml
notebooks/: 1_fp_computing_features.ipynb  2_tp_training_retrieval_model.ipynb  3_tp_training_ranking_model.ipynb  4_ip_computing_item_embeddings.ipynb  5_ip_creating_deployments.ipynb  6_scheduling_materialization_jobs.ipynb  7_ip_creating_deployments_llm_ranking.ipynb
recsys/hopsworks_integration/: __init__.py
