[project]
name = "h-and-m"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hopsworks>=3.4.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "loguru>=0.7.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "streamlit>=1.28.0",
    "sentence-transformers>=2.2.0",
    "xgboost>=2.0.0",
    "scikit-learn>=1.3.0",
    "python-dotenv>=1.0.0",
    "langchain>=0.1.0",
    "openai>=1.0.0",
    "ipython>=8.0.0",
    "jupyter>=1.0.0",
]
